--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dropzone": "^5.2.0",
     "express": "^4.16.1",
+    "jquery": "^3.2.1",
     "q": "^1.5.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-dropzone": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "superagent": "^3.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
