--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "express": "^4.16.1",
+    "moment": "^2.19.1",
     "q": "^1.5.0",
     "react": "^16.0.0",
+    "react-cropper": "^1.0.0",
     "react-dom": "^16.0.0",
     "react-dropzone": "^4.2.0",
     "react-router-dom": "^4.2.2",
