--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.16.1",
+    "moment": "^2.19.1",
     "q": "^1.5.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
