--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "async": "^2.6.0",
     "express": "^4.16.1",
     "moment": "^2.19.1",
     "q": "^1.5.0",
