--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "async": "^2.6.0",
     "express": "^4.16.1",
     "moment": "^2.19.1",
+    "numeral": "^2.0.6",
     "q": "^1.5.0",
     "react": "^16.0.0",
     "react-cropper": "^1.0.0",
