--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dropzone": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
+    "react-select": "^1.1.0",
     "react-tabs": "^2.1.1",
     "request": "^2.83.0",
     "superagent": "^3.6.3"
