--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "numeral": "^2.0.6",
     "q": "^1.5.0",
     "react": "^16.0.0",
+    "react-burger-menu": "^2.1.11",
     "react-cropper": "^1.0.0",
     "react-dom": "^16.0.0",
     "react-dropdown": "^1.3.3",
