--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "numeral": "^2.0.6",
     "q": "^1.5.0",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.31.5",
     "react-cropper": "^1.0.0",
     "react-dom": "^16.0.0",
     "react-dropdown": "^1.3.3",
     "react-dropzone": "^4.2.0",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "react-select": "^1.0.1",
