--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "async": "^2.6.0",
     "express": "^4.16.1",
+    "lodash": "^4.17.4",
     "moment": "^2.19.1",
     "numeral": "^2.0.6",
     "q": "^1.5.0",
@@ -15,6 +16,7 @@
     "react-dom": "^16.0.0",
     "react-dropdown": "^1.3.3",
     "react-dropzone": "^4.2.0",
+    "react-modal": "^3.1.8",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
