--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "async": "^2.6.0",
     "express": "^4.16.1",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
     "numeral": "^2.0.6",
